--- a/_site.yml
+++ b/_site.yml
@@ -1,13 +1,14 @@
 name: "virema-faq"
 navbar:
-  title: "ViReMa in R"
+  title: "Visualizing Viral Recombination: Analyzing ViReMa Output"
   left:
-    - text: "Tutorial"
-      href: index.html
-    - text: "ViReMa with Shiny"
+    - text: "Tutorial with R"
+      href: rtutorial.html
+    - text: "Tutorial with Shiny"
+      href: shinytutorial.html
+    - text: "ViReMa Web App"
       href: https://jasonyeung.shinyapps.io/virema/
-    - text: "Download ViReMa"
-      href: https://bioconda.github.io/recipes/virema/README.html
+
   right: 
     - icon: fa-envelope fa-lg
       href: mailto:<jasonyeung012@gmail.com>
@@ -16,5 +17,4 @@ navbar:
 output:
   html_document:
     theme: yeti
-    toc: true
     fig_caption: false
